--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,8 +13,7 @@ body {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
-    /*I put this in to bring our navigation options to the same level as our logo*/
-    display: inline-flex;
+    display: flex;
 }
 
 .header h1 {
@@ -33,12 +32,12 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-/* Added nav instead of div to match markup */
-.header nav ul {
+
+.header div ul {
     list-style-type: none;
 }
 /*Added nav to replace div*/
-.header nav ul li {
+.header div ul li {
     display: inline-block;
     margin-left: 25px;
 }
